[package]
name = "rust_wifi_password_extractor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "^0.52"

features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_NetworkManagement_WiFi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
]
[dependencies]
chrono = "0.4.33"
